<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/mProfileImage"
            android:layout_width="@dimen/one_hundred_eighty"
            android:layout_height="@dimen/one_hundred_eighty"
            android:layout_marginStart="@dimen/eight"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginTop="@dimen/one_hundred_twenty"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/eder"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="@dimen/four"
            />

    <TextView
            style="@style/TitleTextView"
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginTop="@dimen/twenty_four"
            android:padding="@dimen/eight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mProfileImage"
            android:text="@string/eder"
            />

    <TextView
            style="@style/TitleTextView"
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginTop="@dimen/eight"
            android:padding="@dimen/eight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName"
            android:textSize="@dimen/big_size_tv"
            android:text="@string/position"
            />

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="@dimen/none"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginTop="@dimen/eight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
            android:orientation="horizontal"
            android:gravity="center"
            >

        <ImageView
                android:id="@+id/mLinkedInImage"
                android:layout_width="@dimen/sixty"
                android:layout_height="@dimen/sixty"
                android:layout_marginStart="@dimen/eight"
                android:layout_marginEnd="@dimen/eight"
                android:layout_marginTop="@dimen/eight"
                android:layout_marginBottom="@dimen/eight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:clickable="true"
                app:srcCompat="@drawable/ic_linkedin"
                android:focusable="true"
                android:contentDescription="@string/linked_in_profile"
                />

        <ImageView
                android:id="@+id/mGithubImage"
                android:layout_width="@dimen/sixty"
                android:layout_height="@dimen/sixty"
                android:layout_marginStart="@dimen/eight"
                android:layout_marginEnd="@dimen/eight"
                android:layout_marginTop="@dimen/eight"
                android:layout_marginBottom="@dimen/eight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/ic_github"
                android:contentDescription="@string/github_profile"
                />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/mShowResumeContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/eight"
            android:layout_marginEnd="@dimen/eight"
            android:layout_marginTop="@dimen/eight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            >

        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="@dimen/sixty"
                android:layout_height="@dimen/eighty_two"
                android:layout_gravity="center"
                app:lottie_fileName="phone_anim.json"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                />

        <TextView
                style="@style/TitleTextView"
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/show_resume"
                />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
